# corrosion

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/components/: header.rs  mod.rs  nav.rs
src/layouts/: default.rs  mod.rs
src/lib/: mod.rs
src/lib/domain/: component.rs  elements.rs  layout.rs  mod.rs  page.rs  script.rs  style.rs
src/lib/utils/: clean.rs
src/pages/: index.rs  not_found.rs
src/scripts/: greet.rs
src/styles/: mod.rs  shared.rs
src/wwwroot/: index.html
