[package]
name = "corrosion"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = 'src/main.rs'

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics"
]
